marker to each section

--- a/service-details.html
+++ b/service-details.html
@@ -285,53 +285,7 @@
           <div class="row g-5">
             <div class="col-lg-4 col-12">
               <div class="main-sideber">
-                <div class="single-sideber-widget">
-                  <ul>
-                    <li>
-                      <a href="service-details.html">Creación de Empresas</a>
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html"
-                        >Corporativo y Empresarial</a
-                      >
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html">Propiedad Intelectual</a>
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html">Inmobiliario</a>
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html">Licencias y Permisos</a>
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html">Fideicomisos</a>
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html"
-                        >Litigio y Resolución de Controversias</a
-                      >
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html"
-                        >Concursos Mercantiles, Insolvencia, Quiebras y
-                        Reestructuras</a
-                      >
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                    <li>
-                      <a href="service-details.html">Laboral</a>
-                      <span><i class="fa-solid fa-chevron-right"></i></span>
-                    </li>
-                  </ul>
-                </div>
+                <div class="single-sideber-widget"></div>
                 <div
                   class="contact-bg bg-cover"
                   style="background-image: url(assets/img/project/bg.jpg)"
@@ -359,72 +313,7 @@
             </div>
             <div class="col-lg-8 col-12">
               <div class="service-details-post">
-                <div class="details-image">
-                  <img src="assets/img/service/details.jpg" alt="img" />
-                </div>
                 <div class="details-content">
-                  <h3>Resumen del Servicio</h3>
-                  <p class="mb-2">
-                    En un contexto profesional, a menudo sucede que clientes
-                    privados o corporativos solicitan que se realice y presente
-                    una publicación con el contenido aún no listo. Piensa en un
-                    blog de noticias que se llena de contenido cada hora el día
-                    de su lanzamiento. Sin embargo, los revisores tienden a ser
-                    distraídos por contenido comprensible, como un texto
-                    aleatorio copiado de un periódico o de internet. Hay muchas
-                    variaciones de pasajes de Lorem Ipsum disponibles, pero la
-                    mayoría tienen forma, con humor inyectado.
-                  </p>
-                  <p class="mb-5">
-                    Morbi accumsan ipsum venec tellus a odio tincidunt auctor
-                    Sed non mauris vitae erat consequat auctor eu in elit. Class
-                    aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
-                    ac urna eu felispibus condimentum sit amet a augue. Sed non
-                    neque torquent per conubia nostra elit.
-                  </p>
-                  <h3>Evaluación y Mejora</h3>
-                  <p>
-                    Morbi accumsan ipsum venec tellus a odio tincidunt auctor
-                    Sed non mauris vitae erat consequat auctor eu in elit. Class
-                    aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
-                    ac urna eu felispibus condimentum sit amet a augue. Sed non
-                    felispibus condimentum neque elit.
-                  </p>
-                  <ul class="details-list">
-                    <li>
-                      <i class="fa-solid fa-check"></i>
-                      Creación y edición de contenido
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check"></i>
-                      Flujos de trabajo, informes y organización de contenido
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check"></i>
-                      Administración y seguridad basada en usuarios y roles
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check"></i>
-                      Flexibilidad, escalabilidad, rendimiento y análisis
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check"></i>
-                      Capacidades de contenido multilingüe
-                    </li>
-                  </ul>
-                  <h3>El Resultado Final</h3>
-                  <p>
-                    En un contexto profesional, a menudo sucede que clientes
-                    privados o corporativos solicitan que se realice y presente
-                    una publicación con el contenido aún no listo. Piensa en un
-                    blog de noticias que se llena de contenido cada hora el día
-                    de su lanzamiento. Sin embargo, los revisores tienden a ser
-                    distraídos por contenido comprensible, como un texto
-                    aleatorio copiado de un periódico o de internet. Hay muchas
-                    variaciones de pasajes de Lorem Ipsum disponibles.
-                  </p>
                   <div class="contact-form-items">
                     <form
                       action="#"
