--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </ul>
               <div class="header-button mt-4">
                 <a href="contact.html" class="theme-btn">
-                  Solicitar una cotización
+                  Solicitar Consulta
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
               </div>
@@ -220,7 +220,7 @@
                   ><i class="fa-regular fa-magnifying-glass"></i
                 ></a>
                 <a href="contact.html" class="theme-btn style-2">
-                  Solicitar una Cotización
+                  Solicitar Consulta
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
                 <div class="header__hamburger d-xl-none my-auto">
@@ -459,23 +459,21 @@
     >
       <div class="container">
         <div class="section-title">
-          <span class="sub-title">CONTACTO</span>
+          <span class="sub-title wow fadeInUp">CONTACTO</span>
         </div>
+
         <div class="service-details-wrapper">
           <div class="row g-5">
             <div class="col-lg-4 col-12">
               <div class="main-sideber">
                 <div class="single-sideber-widget"></div>
-                <div
-                  class="contact-bg bg-cover"
-                  style="background-image: url(assets/img/project/bg.jpg)"
-                >
+                <div class="contact-bg bg-cover">
                   <div class="contact-item">
                     <div class="icon">
                       <i class="fa-regular fa-scale-balanced"></i>
                     </div>
                     <div class="contact-content">
-                      <h4>¿Cómo Podemos Ayudar?</h4>
+                      <h4>¿Cómo podemos ayudar?</h4>
                       <p>
                         Montes Urales 424, Lomas de Chapultepec V Secc., Miguel
                         Hidalgo, Ciudad de México Synapse@support.com
@@ -547,7 +545,7 @@
                             <textarea
                               name="message"
                               id="message"
-                              placeholder="Fecha del accidente y descripción general"
+                              placeholder="Dudas o Comentarios"
                             ></textarea>
                           </div>
                         </div>
