--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                   </div>
                   <div class="offcanvas__contact-text">
                     <a target="_blank" href="#"
-                      >Calle Principal, Melbourne, Australia</a
+                      >Montes Urales 424, Lomas de Chapultepec V Secc., Miguel
+                      Hidalgo, Ciudad de México</a
                     >
                   </div>
                 </li>
@@ -298,10 +299,10 @@
             cerrar negocios con seguridad y resolver conflictos cuando se
             presenten.
           </h2>
-          <p>
+          <h3>
             Nuestro objetivo es que entiendas tus opciones y tengas el respaldo
             que necesitas, de forma clara y cercana.
-          </p>
+          </h3>
         </div>
       </div>
     </section>
