--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="col-lg-0">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".3s">
-                Soluciones sencillas para problemas complejos.<br />
+                Asesoría legal, clara, estratégica y accesible.<br />
               </h1>
               <h2
                 class="wow fadeInUp"
@@ -279,7 +279,7 @@
                 data-wow-delay="1.5s"
                 style="color: white"
               >
-                Asesoría legal, clara, estratégica y accesible<br />
+                Soluciones sencillas para problemas complejos.<br />
               </h3>
               <!-- <p class="wow fadeInUp" data-wow-delay="1s">
                 Asesoría legal, clara, estratégica y accesible
