--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                   <h6>
                     <a href="tel:+18884237576">+52 5561078862</a>
                     <a href="mailto:Synapse@support.com">
-                      Synapse@support.com
+                      synapse@support.com
                     </a>
                   </h6>
                 </div>
