--- a/index-two-page.html
+++ b/index-two-page.html
@@ -91,9 +91,9 @@
                     <i class="fal fa-envelope"></i>
                   </div>
                   <div class="offcanvas__contact-text">
-                    <a href="mailto:info@example.com"
-                      ><span class="mailto:info@example.com"
-                        >info@example.com</span
+                    <a href="mailto:contacto@synapse-legal.com.mx"
+                      ><span class="mailto:contacto@synapse-legal.com.mx"
+                        >contacto@synapse-legal.com.mx</span
                       ></a
                     >
                   </div>
@@ -111,7 +111,7 @@
                     <i class="far fa-phone"></i>
                   </div>
                   <div class="offcanvas__contact-text">
-                    <a href="tel:+11002345909">+11002345909</a>
+                    <a href="tel:+525561078862">+52 5561078862</a>
                   </div>
                 </li>
               </ul>
@@ -1686,8 +1686,8 @@
                   </h6>
                   <h6>
                     <a href="tel:+18884237576">+52 5561078862</a>
-                    <a href="mailto:Synapse@support.com">
-                      Synapse@support.com
+                    <a href="mailto:contacto@synapse-legal.com.mx">
+                      contacto@synapse-legal.com.mx
                     </a>
                   </h6>
                 </div>
