WhatsApp button ready

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </li>
               </ul>
               <div class="header-button mt-4">
-                <a href="contact.html" class="theme-btn">
+                <a href="#contact-section" class="theme-btn">
                   Solicitar Consulta
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
@@ -220,7 +220,7 @@
                 <a href="#0" class="search-trigger search-icon"
                   ><i class="fa-regular fa-magnifying-glass"></i
                 ></a>
-                <a href="contact.html" class="theme-btn style-2">
+                <a href="#contact-section" class="theme-btn style-2">
                   Solicitar Consulta
                   <i class="fa-sharp fa-regular fa-arrow-right"></i
                 ></a>
@@ -568,10 +568,7 @@
     </section>
 
     <!-- Footer-section Start -->
-    <section
-      class="footer-section fix bg-cover"
-      style="background-image: url(assets/img/footer/bg.jpg)"
-    >
+    <section class="footer-section fix bg-cover">
       <div class="container">
         <div class="footer-widget-wrapper">
           <div class="row">
@@ -676,5 +673,30 @@
     <script src="assets/js/wow.min.js"></script>
     <!--<< Main.js >>-->
     <script src="assets/js/main.js"></script>
+
+    <!-- WhatsApp Floating Button Start -->
+    <a
+      href="https://wa.me/525561078862"
+      class="whatsapp-float"
+      target="_blank"
+      style="
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #25d366;
+        color: white;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+      "
+    >
+      <i class="fab fa-whatsapp" style="font-size: 30px"></i>
+    </a>
+    <!-- WhatsApp Floating Button End -->
   </body>
 </html>
