logo in contact transparent

--- a/index.html
+++ b/index.html
@@ -468,8 +468,20 @@
                 <div class="single-sideber-widget"></div>
                 <div class="contact-bg bg-cover">
                   <div class="contact-item">
-                    <div class="icon">
-                      <i class="fa-regular fa-scale-balanced"></i>
+                    <div
+                      class="icon"
+                      style="
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        margin-bottom: 30px;
+                      "
+                    >
+                      <img
+                        src="assets/img/logo/synapse-logo.png"
+                        alt="Synapse Logo"
+                        style="width: 240px; height: 192px; object-fit: contain"
+                      />
                     </div>
                     <div class="contact-content">
                       <h4>¿Cómo podemos ayudar?</h4>
